# AnalogueSynth

./: README.md
SynthPico/: CMakeLists.txt  LCRFilter.cpp  LCRFilter.h  benchmark.cpp  benchmark.h  constants.h  keyPressedInfo.h  lfo.cpp  lfo.h  main.cpp  midi.cpp  midi.h  noise.cpp  noise.h  pan.cpp  pan.h  patch.cpp  patch.h  reverb.cpp  reverb.h  signal.cpp  signal.h  socket.cpp  socket.h  synth.cpp  synth.h  synth_main.cpp  tdl.cpp  tdl.h  voice.cpp  voice.h  wavegenerator.cpp  wavegenerator.h
SynthVisualStudio/: .editorconfig  SynthVisualStudio.sln
SynthVisualStudio/FilterTest/: FilterTest.sln
SynthVisualStudio/FilterTest/FilterTest/: Filter.cs  Program.cs
SynthVisualStudio/SynthControl/: App.xaml  App.xaml.cs  Filter.xaml  Filter.xaml.cs  Keyboard.xaml  Keyboard.xaml.cs  LFO.xaml  LFO.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Octive.xaml  Octive.xaml.cs  Reverb.xaml  Reverb.xaml.cs  TDL.xaml  TDL.xaml.cs  WG.xaml  WG.xaml.cs
SynthVisualStudio/SynthVisualStudio/: LCRFilter.cpp  LCRFilter.h  Last_Patch.txt  SynthVisualStudio.cpp  SynthVisualStudio.vcxproj  SynthVisualStudio.vcxproj.filters  benchmark.cpp  benchmark.h  constants.h  filter.cpp  filter.h  lfo.cpp  lfo.h  main.cpp  main.h  makefile  midi.cpp  midi.h  noise.cpp  noise.h  pan.cpp  pan.h  patch.cpp  patch.h  portaudio.cpp  portaudio.h  reverb.cpp  reverb.h  sampleset.cpp  sampleset.h  socket.cpp  socket.h  stdafx.cpp  stdafx.h  synth  synth.cpp  synth.h  tdl.cpp  tdl.h  voice.cpp  (+6 more)
SynthVisualStudio/SynthWebsockets/: ControlPage.html  SynthWebsockets.vcxitems
SynthVisualStudio/SynthWebsocketsServer/: Program.cs  Startup.cs  SynthWebsocketsServer.csproj
SynthVisualStudio/SynthWebsocketsServer/Controllers/: SynthUIController.cs
SynthVisualStudio/SynthWebsocketsServer/Services/: ISocketService.cs  SocketService.cs
synth/: Last_Patch.txt  benchmark.cpp  benchmark.h  constants.h  filter.cpp  filter.h  lfo.cpp  lfo.h  main.cpp  main.h  makefile  midi.cpp  midi.h  noise.cpp  noise.h  patch.cpp  patch.h  reverb.cpp  reverb.h  sampleset.cpp  sampleset.h  socket.cpp  socket.h  stdafx.cpp  stdafx.h  synth  synth.cpp  synth.h  tdl.cpp  tdl.h  voice.cpp  voice.h  wav.cpp  wav.csv  wav.h  wavegenerator.h
synth/patches/: Drum..txt  Patch_0.txt  Patch_1.txt  Patch_2.txt  Patch_3.txt  Patch_4.txt
